--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
   "twrp_url": "git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git",
-  "twrp_branch": "twrp-8.1",
+  "twrp_branch": "twrp-9.0",
   "git_username": "voipsy",
   "git_email": "37921907+voipsy@users.noreply.github.com",
   "use_own_dt": true,
-  "dt_url": "azwhikaru/twrp_device_xiaomi_babel",
+  "dt_url": "SupersuROOT/device_tree_x1pro",
   "dt_branch": "main",
   "dt_remote": "github",
-  "dt_path": "device/xiaomi/Babel",
-  "device_code": "Babel",
+  "dt_path": "device/iFLYTEK/TYE100",
+  "device_code": "TYE100",
   "use_omin_head": true,
   "use_repair_manifest": false,
   "fix_product": false,
