--- a/config.json
+++ b/config.json
@@ -7,12 +7,12 @@
   "dt_url": "SupersuROOT/device_tree_x1pro",
   "dt_branch": "main",
   "dt_remote": "github",
-  "dt_path": "device/iFLYTEK/TYE100",
+  "dt_path": "device/qcom/TYE100",
   "device_code": "TYE100",
   "use_omin_head": true,
   "use_repair_manifest": false,
   "fix_product": false,
   "fix_misscom": false,
   "fix_busybox": false,
-  "fix_branch": "android-10.0"
+  "fix_branch": "android-8.1"
 }
