--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
   "device_code": "TYE100",
   "use_omin_head": true,
   "use_repair_manifest": true,
-  "fix_product": false,
+  "fix_product": true,
   "fix_misscom": false,
   "fix_busybox": false,
   "fix_branch": "android-8.1"
